refactor: Update project references from 'ariyadey' to 'sirine' and adjust related configurations

--- a/projects/ariyadey-main/src/index.html
+++ b/projects/ariyadey-main/src/index.html
@@ -1,174 +1,166 @@
 <!doctype html>
 <html style="height: 100%">
-  <head>
-    <!-- Splash Screen Image -->
-    <!--suppress HtmlUnknownAttribute -->
-    <link
-      as="image"
-      fetchpriority="high"
-      href="/img/ariya-moheb-avatar-200w.avif"
-      rel="preload"
-      type="image/avif"
-    />
 
-    <!-- LCP Image -->
-    <!--suppress HtmlUnknownAttribute -->
-    <link
-      as="image"
-      fetchpriority="high"
-      href="/img/ariya-moheb-avatar-800w.avif"
-      rel="preload"
-      type="image/avif"
-    />
+<head>
+  <!-- Splash Screen Image -->
+  <!--suppress HtmlUnknownAttribute -->
+  <link as="image" fetchpriority="high" href="/img/ariya-moheb-avatar-200w.avif" rel="preload" type="image/avif" />
 
-    <!-- Google Assets -->
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Vazirmatn:wght@400;500;700&family=Arya:wght@400;500;700&family=Zain:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"
-      rel="stylesheet"
-    />
+  <!-- LCP Image -->
+  <!--suppress HtmlUnknownAttribute -->
+  <link as="image" fetchpriority="high" href="/img/ariya-moheb-avatar-800w.avif" rel="preload" type="image/avif" />
 
-    <!-- Google Tag (gtag.js) -->
-    <!--suppress HtmlUnknownAttribute -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DP2BWS9N0E"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
+  <!-- Google Assets -->
+  <link href="https://fonts.googleapis.com" rel="preconnect" />
+  <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Vazirmatn:wght@400;500;700&family=Arya:wght@400;500;700&family=Zain:wght@400;500;700&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet" />
 
-      function gtag() {
-        dataLayer.push(arguments);
-      }
+  <!-- Google Tag (gtag.js) -->
+  <!--suppress HtmlUnknownAttribute -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DP2BWS9N0E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-      gtag("js", new Date());
-      // noinspection SpellCheckingInspection
-      gtag("config", "G-DP2BWS9N0E");
-    </script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
 
-    <!-- Basic -->
-    <meta charset="utf-8" />
-    <base href="/" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Ariya Moheb - Full-Stack Software Engineer</title>
-    <meta
-      content="Results-oriented Software Engineer with 5+ years of experience in Java, Spring, and Angular. Specializing in enterprise and web app development, I focus on performance optimization and high-quality product delivery."
-      name="description"
-    />
-    <meta content="Ariya Moheb, Arya Moheb, Aria Moheb, Mojtaba Moheb, AriyaDey" name="keywords" />
+    gtag("js", new Date());
+    // noinspection SpellCheckingInspection
+    gtag("config", "G-DP2BWS9N0E");
+  </script>
 
-    <!-- Favicons -->
-    <link href="/favicon/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png" />
-    <link href="/favicon/favicon.svg" rel="icon" type="image/svg+xml" />
-    <link href="/favicon/favicon.ico" rel="shortcut icon" />
-    <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
-    <meta content="Ariya" name="apple-mobile-web-app-title" />
-    <link href="/favicon/site.webmanifest" rel="manifest" />
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <base href="/" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <title>Ariya Moheb - Full-Stack Software Engineer</title>
+  <meta
+    content="Results-oriented Software Engineer with 5+ years of experience in Java, Spring, and Angular. Specializing in enterprise and web app development, I focus on performance optimization and high-quality product delivery."
+    name="description" />
+  <meta content="Ariya Moheb, Arya Moheb, Aria Moheb, Mojtaba Moheb, sirine" name="keywords" />
 
-    <!-- Open Graph -->
-    <meta content="Ariya Moheb - Full-Stack Software Engineer" property="og:title" />
-    <meta content="website" property="og:type" />
-    <meta content="https://ariyadey.me" property="og:url" />
-    <meta content="https://ariyadey.me/img/ariya-moheb-avatar-preview.jpg" property="og:image" />
-    <meta content="1200" property="og:image:width" />
-    <meta content="960" property="og:image:height" />
-    <meta content="Ariya Moheb's professional avatar" property="og:image:alt" />
-    <meta
-      content="Results-oriented Software Engineer with 5+ years of experience in Java, Spring, and Angular. Specializing in enterprise and web app development, I focus on performance optimization and high-quality product delivery."
-      property="og:description"
-    />
+  <!-- Favicons -->
+  <link href="/favicon/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png" />
+  <link href="/favicon/favicon.svg" rel="icon" type="image/svg+xml" />
+  <link href="/favicon/favicon.ico" rel="shortcut icon" />
+  <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
+  <meta content="Ariya" name="apple-mobile-web-app-title" />
+  <link href="/favicon/site.webmanifest" rel="manifest" />
 
-    <!-- Splash Screen Styles -->
-    <style>
-      app-root:empty {
-        display: none;
-      }
+  <!-- Open Graph -->
+  <meta content="Ariya Moheb - Full-Stack Software Engineer" property="og:title" />
+  <meta content="website" property="og:type" />
+  <meta content="https://sirine.me" property="og:url" />
+  <meta content="https://sirine.me/img/ariya-moheb-avatar-preview.jpg" property="og:image" />
+  <meta content="1200" property="og:image:width" />
+  <meta content="960" property="og:image:height" />
+  <meta content="Ariya Moheb's professional avatar" property="og:image:alt" />
+  <meta
+    content="Results-oriented Software Engineer with 5+ years of experience in Java, Spring, and Angular. Specializing in enterprise and web app development, I focus on performance optimization and high-quality product delivery."
+    property="og:description" />
 
+  <!-- Splash Screen Styles -->
+  <style>
+    app-root:empty {
+      display: none;
+    }
+
+    #splash-screen {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 9999;
+      background-color: #fef8f1;
+      /* Neutral - 98 */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: opacity 0.5s ease-out;
+      /* Fade out transition */
+      opacity: 1;
+      pointer-events: all;
+      /* Clicks don't pass through when visible */
+    }
+
+    /*noinspection CssUnusedSymbol*/
+    #splash-screen.hidden {
+      opacity: 0;
+      pointer-events: none;
+      /* Clicks pass through when hidden */
+    }
+
+    .splash-content {
+      position: relative;
+      aspect-ratio: 1;
+      width: 144px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .splash-image {
+      aspect-ratio: 1;
+      width: 80%;
+      border-radius: 50%;
+      z-index: 1;
+      background-color: transparent;
+      /* The BG color when the image is not loaded yet */
+      color: transparent;
+      /* Trying making the alt text transparent */
+    }
+
+    .circular-spinner {
+      position: absolute;
+      aspect-ratio: 1;
+      width: 100%;
+      border: 8px solid #f9f3ec;
+      /* Neutral 96 */
+      border-top-color: #715c00;
+      /* Primary 40 */
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      z-index: 0;
+    }
+
+    @media (prefers-color-scheme: dark) {
       #splash-screen {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        z-index: 9999;
-        background-color: #fef8f1; /* Neutral - 98 */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: opacity 0.5s ease-out; /* Fade out transition */
-        opacity: 1;
-        pointer-events: all; /* Clicks don't pass through when visible */
-      }
-
-      /*noinspection CssUnusedSymbol*/
-      #splash-screen.hidden {
-        opacity: 0;
-        pointer-events: none; /* Clicks pass through when hidden */
-      }
-
-      .splash-content {
-        position: relative;
-        aspect-ratio: 1;
-        width: 144px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .splash-image {
-        aspect-ratio: 1;
-        width: 80%;
-        border-radius: 50%;
-        z-index: 1;
-        background-color: transparent; /* The BG color when the image is not loaded yet */
-        color: transparent; /* Trying making the alt text transparent */
+        background-color: #15130f;
+        /* Neutral 6 */
       }
 
       .circular-spinner {
-        position: absolute;
-        aspect-ratio: 1;
-        width: 100%;
-        border: 8px solid #f9f3ec; /* Neutral 96 */
-        border-top-color: #715c00; /* Primary 40 */
-        border-radius: 50%;
-        animation: spin 1s linear infinite;
-        z-index: 0;
+        border-color: #1d1b17;
+        /* Neutral 10 */
+        border-top-color: #e1c564;
+        /* Primary 80 */
+      }
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
       }
 
-      @media (prefers-color-scheme: dark) {
-        #splash-screen {
-          background-color: #15130f; /* Neutral 6 */
-        }
-
-        .circular-spinner {
-          border-color: #1d1b17; /* Neutral 10 */
-          border-top-color: #e1c564; /* Primary 80 */
-        }
+      100% {
+        transform: rotate(360deg);
       }
+    }
+  </style>
+</head>
 
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-    </style>
-  </head>
-
-  <body style="height: 100%; margin: 0">
-    <div id="splash-screen">
-      <div class="splash-content">
-        <!--suppress AngularNgOptimizedImage -->
-        <img
-          class="splash-image"
-          alt="Ariya Moheb's professional avatar"
-          src="/img/ariya-moheb-avatar-200w.avif"
-        />
-        <span class="circular-spinner"></span>
-      </div>
+<body style="height: 100%; margin: 0">
+  <div id="splash-screen">
+    <div class="splash-content">
+      <!--suppress AngularNgOptimizedImage -->
+      <img class="splash-image" alt="Ariya Moheb's professional avatar" src="/img/ariya-moheb-avatar-200w.avif" />
+      <span class="circular-spinner"></span>
     </div>
-    <app-root></app-root>
-  </body>
+  </div>
+  <app-root></app-root>
+</body>
+
 </html>
